--- a/authentication/changepassword.html
+++ b/authentication/changepassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mahfil | Forgot Password</title>
+    <title>Mahfil | Change Password</title>
     <!-- FAVICON -->
     <link
       rel="shortcut icon"
@@ -29,18 +29,42 @@
                 </a>
 
                 <div class="titlebox">
-                  <h1 class="title">Forget Password</h1>
+                  <h1 class="title">Set New Password</h1>
                 </div>
               </div>
 
               <div class="authenticationform-body">
                 <div class="inputbox">
-                  <label for="forgotmail" class="inputlabel">Email</label>
+                  <label for="oldpass" class="inputlabel"> Old Password </label>
                   <input
-                    type="email"
-                    id="forgotmail"
+                    type="text"
+                    id="oldpass"
                     class="inputfield"
-                    placeholder="Enter email address"
+                    placeholder="Enter password"
+                    autocomplete="off"
+                  />
+                </div>
+
+                <div class="inputbox">
+                  <label for="newpass" class="inputlabel"> New Password </label>
+                  <input
+                    type="text"
+                    id="newpass"
+                    class="inputfield"
+                    placeholder="Confirm password"
+                    autocomplete="off"
+                  />
+                </div>
+
+                <div class="inputbox">
+                  <label for="confirmnewpass" class="inputlabel">
+                    Confirm New Password
+                  </label>
+                  <input
+                    type="text"
+                    id="confirmnewpass"
+                    class="inputfield"
+                    placeholder="Confirm password"
                     autocomplete="off"
                   />
                 </div>
@@ -49,8 +73,12 @@
               <div class="authenticationform-footer">
                 <div class="sendlink">
                   <button type="submit" class="btn-submit">
-                    Send Reset Link
+                    Change Password
                   </button>
+                </div>
+                <div class="authentictext">
+                  <span class="text">Password Remembered?</span>
+                  <a href="login.html" class="link">Login</a>
                 </div>
               </div>
             </form>
