desktop-sidebar completed with responsive

--- a/index.html
+++ b/index.html
@@ -908,6 +908,7 @@
                   </span>
                 </button>
               </h2>
+
               <div
                 id="collapseDropdown"
                 class="accordion-collapse collapse"
@@ -915,21 +916,289 @@
                 data-bs-parent="#accordionExample"
               >
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <ul class="droplist">
+                    <li class="droplist-item">
+                      <a href="#" class="droplist-link">
+                        <span class="icon">
+                          <img src="assets/images/user/user.png" alt="icon" />
+                        </span>
+                        <span class="text">Mega Bangla Tv</span>
+                      </a>
+                    </li>
+
+                    <li class="droplist-item">
+                      <a href="#" class="droplist-link">
+                        <span class="icon">
+                          <img src="assets/images/user/user.png" alt="icon" />
+                        </span>
+                        <span class="text">Muslim TV</span>
+                      </a>
+                    </li>
+
+                    <li class="droplist-item">
+                      <a href="#" class="droplist-link">
+                        <span class="icon">
+                          <img src="assets/images/user/user.png" alt="icon" />
+                        </span>
+                        <span class="text">Mega Bangla Tv</span>
+                      </a>
+                    </li>
+
+                    <li class="droplist-item">
+                      <button type="button" class="droplist-link active">
+                        <span class="icon">
+                          <img src="assets/images/user/user.png" alt="icon" />
+                        </span>
+                        <span class="text">Mega Bangla Tv</span>
+                      </button>
+                    </li>
+
+                    <li class="droplist-item">
+                      <button type="button" class="btn-create">
+                        <span class="icon">
+                          <svg
+                            width="26"
+                            height="24"
+                            viewBox="0 0 26 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <circle
+                              cx="12.6953"
+                              cy="12"
+                              r="12"
+                              fill="#E2E8F0"
+                            />
+                            <mask
+                              id="deskcreateicon"
+                              style="mask-type: alpha"
+                              maskUnits="userSpaceOnUse"
+                              x="4"
+                              y="4"
+                              width="17"
+                              height="16"
+                            >
+                              <rect
+                                x="4.69531"
+                                y="4"
+                                width="16"
+                                height="16"
+                                fill="#D9D9D9"
+                              />
+                            </mask>
+                            <g mask="url(#deskcreateicon)">
+                              <path
+                                d="M12.0286 16.6666V12.6666H8.02865V11.3333H12.0286V7.33325H13.362V11.3333H17.362V12.6666H13.362V16.6666H12.0286Z"
+                                fill="#4A5568"
+                              />
+                            </g>
+                          </svg>
+                        </span>
+                        <span class="text">Create Channel</span>
+                      </button>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="sidebar-body"></div>
+
+        <div class="sidebar-body">
+          <ul class="sidelist">
+            <li class="sidelist-item">
+              <a href="#" class="sidelist-link active">
+                <span class="icon">
+                  <svg
+                    width="21"
+                    height="20"
+                    viewBox="0 0 21 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <mask
+                      id="dashicon"
+                      style="mask-type: alpha"
+                      maskUnits="userSpaceOnUse"
+                      x="0"
+                      y="0"
+                      width="21"
+                      height="20"
+                    >
+                      <rect
+                        x="0.348389"
+                        width="20"
+                        height="20"
+                        fill="#D9D9D9"
+                      />
+                    </mask>
+                    <g mask="url(#dashicon)">
+                      <path
+                        d="M4.51506 17.5C4.05672 17.5 3.66422 17.3369 3.33756 17.0108C3.01144 16.6842 2.84839 16.2917 2.84839 15.8333V4.16667C2.84839 3.70833 3.01144 3.31583 3.33756 2.98917C3.66422 2.66306 4.05672 2.5 4.51506 2.5H16.1817C16.6401 2.5 17.0326 2.66306 17.3592 2.98917C17.6853 3.31583 17.8484 3.70833 17.8484 4.16667V15.8333C17.8484 16.2917 17.6853 16.6842 17.3592 17.0108C17.0326 17.3369 16.6401 17.5 16.1817 17.5H4.51506ZM4.51506 15.8333H9.51506V4.16667H4.51506V15.8333ZM11.1817 15.8333H16.1817V10H11.1817V15.8333ZM11.1817 8.33333H16.1817V4.16667H11.1817V8.33333Z"
+                        fill="#1A202C"
+                      />
+                    </g>
+                  </svg>
+                </span>
+                <span class="text">Dashboard</span>
+              </a>
+            </li>
+
+            <li class="sidelist-item">
+              <a href="#" class="sidelist-link">
+                <span class="icon">
+                  <svg
+                    width="21"
+                    height="20"
+                    viewBox="0 0 21 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <mask
+                      id="movieicon"
+                      style="mask-type: alpha"
+                      maskUnits="userSpaceOnUse"
+                      x="0"
+                      y="0"
+                      width="21"
+                      height="20"
+                    >
+                      <rect
+                        x="0.477783"
+                        width="20"
+                        height="20"
+                        fill="#D9D9D9"
+                      />
+                    </mask>
+                    <g mask="url(#movieicon)">
+                      <path
+                        d="M3.81108 3.33337L5.47774 6.66671H7.97774L6.31108 3.33337H7.97774L9.64441 6.66671H12.1444L10.4777 3.33337H12.1444L13.8111 6.66671H16.3111L14.6444 3.33337H17.1444C17.6027 3.33337 17.9952 3.49671 18.3219 3.82337C18.648 4.14948 18.8111 4.54171 18.8111 5.00004V15C18.8111 15.4584 18.648 15.8509 18.3219 16.1775C17.9952 16.5037 17.6027 16.6667 17.1444 16.6667H3.81108C3.35274 16.6667 2.96052 16.5037 2.63441 16.1775C2.30774 15.8509 2.14441 15.4584 2.14441 15V5.00004C2.14441 4.54171 2.30774 4.14948 2.63441 3.82337C2.96052 3.49671 3.35274 3.33337 3.81108 3.33337ZM3.81108 8.33337V15H17.1444V8.33337H3.81108Z"
+                        fill="#1A202C"
+                      />
+                    </g>
+                  </svg>
+                </span>
+                <span class="text">Video</span>
+              </a>
+            </li>
+
+            <li class="sidelist-item">
+              <a href="#" class="sidelist-link">
+                <span class="icon">
+                  <svg
+                    width="17"
+                    height="16"
+                    viewBox="0 0 17 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.68172 13.8333H5.01506V7.16667H1.68172V13.8333ZM6.68172 13.8333H10.0151V2.16667H6.68172V13.8333ZM11.6817 13.8333H15.0151V8.83333H11.6817V13.8333ZM0.0150566 15.5V5.5H5.01506V0.5H11.6817V7.16667H16.6817V15.5H0.0150566Z"
+                      fill="#1A202C"
+                    />
+                  </svg>
+                </span>
+                <span class="text">Analytics</span>
+              </a>
+            </li>
+
+            <li class="sidelist-item">
+              <a href="#" class="sidelist-link">
+                <span class="icon">
+                  <svg
+                    width="21"
+                    height="20"
+                    viewBox="0 0 21 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <mask
+                      id="commenticon"
+                      style="mask-type: alpha"
+                      maskUnits="userSpaceOnUse"
+                      x="0"
+                      y="0"
+                      width="21"
+                      height="20"
+                    >
+                      <rect
+                        x="0.348389"
+                        width="20"
+                        height="20"
+                        fill="#D9D9D9"
+                      />
+                    </mask>
+                    <g mask="url(#commenticon)">
+                      <path
+                        d="M5.34839 11.6667H12.0151V9.99999H5.34839V11.6667ZM5.34839 9.16666H15.3484V7.49999H5.34839V9.16666ZM5.34839 6.66666H15.3484V4.99999H5.34839V6.66666ZM2.01506 18.3333V3.33332C2.01506 2.87499 2.17839 2.48249 2.50506 2.15582C2.83117 1.82971 3.22339 1.66666 3.68172 1.66666H17.0151C17.4734 1.66666 17.8659 1.82971 18.1926 2.15582C18.5187 2.48249 18.6817 2.87499 18.6817 3.33332V13.3333C18.6817 13.7917 18.5187 14.1842 18.1926 14.5108C17.8659 14.8369 17.4734 15 17.0151 15H5.34839L2.01506 18.3333ZM3.68172 14.3125L4.66089 13.3333H17.0151V3.33332H3.68172V14.3125Z"
+                        fill="#1A202C"
+                      />
+                    </g>
+                  </svg>
+                </span>
+                <span class="text">Comments</span>
+              </a>
+            </li>
+
+            <li class="sidelist-item">
+              <a href="#" class="sidelist-link">
+                <span class="icon">
+                  <svg
+                    width="17"
+                    height="16"
+                    viewBox="0 0 17 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M7.51506 15.5V13.8333H14.1817V7.91667C14.1817 7.11111 14.0289 6.35417 13.7234 5.64583C13.4178 4.9375 13.0012 4.31944 12.4734 3.79167C11.9456 3.26389 11.3276 2.84722 10.6192 2.54167C9.91089 2.23611 9.15394 2.08333 8.34839 2.08333C7.54283 2.08333 6.78589 2.23611 6.07756 2.54167C5.36922 2.84722 4.75117 3.26389 4.22339 3.79167C3.69561 4.31944 3.27895 4.9375 2.97339 5.64583C2.66783 6.35417 2.51506 7.11111 2.51506 7.91667V13H1.68172C1.22339 13 0.831168 12.8369 0.505057 12.5108C0.17839 12.1842 0.0150566 11.7917 0.0150566 11.3333V9.66667C0.0150566 9.34722 0.0914456 9.06583 0.244223 8.8225C0.397001 8.57972 0.59839 8.38194 0.84839 8.22917L0.91089 7.125C1.03589 6.11111 1.32422 5.19444 1.77589 4.375C2.227 3.55556 2.7895 2.86111 3.46339 2.29167C4.13672 1.72222 4.89367 1.28111 5.73422 0.968333C6.57422 0.656111 7.44561 0.5 8.34839 0.5C9.26506 0.5 10.1437 0.656111 10.9842 0.968333C11.8242 1.28111 12.5776 1.72556 13.2442 2.30167C13.9109 2.87833 14.4701 3.57278 14.9217 4.385C15.3728 5.19778 15.6609 6.10417 15.7859 7.10417L15.8484 8.1875C16.0984 8.3125 16.2998 8.49639 16.4526 8.73917C16.6053 8.9825 16.6817 9.25 16.6817 9.54167V11.4583C16.6817 11.7639 16.6053 12.0347 16.4526 12.2708C16.2998 12.5069 16.0984 12.6875 15.8484 12.8125V13.8333C15.8484 14.2917 15.6853 14.6842 15.3592 15.0108C15.0326 15.3369 14.6401 15.5 14.1817 15.5H7.51506ZM5.84839 9.66667C5.61228 9.66667 5.4145 9.58667 5.25506 9.42667C5.09506 9.26722 5.01506 9.06944 5.01506 8.83333C5.01506 8.59722 5.09506 8.39917 5.25506 8.23917C5.4145 8.07972 5.61228 8 5.84839 8C6.0845 8 6.28256 8.07972 6.44256 8.23917C6.602 8.39917 6.68172 8.59722 6.68172 8.83333C6.68172 9.06944 6.602 9.26722 6.44256 9.42667C6.28256 9.58667 6.0845 9.66667 5.84839 9.66667ZM10.8484 9.66667C10.6123 9.66667 10.4145 9.58667 10.2551 9.42667C10.0951 9.26722 10.0151 9.06944 10.0151 8.83333C10.0151 8.59722 10.0951 8.39917 10.2551 8.23917C10.4145 8.07972 10.6123 8 10.8484 8C11.0845 8 11.2826 8.07972 11.4426 8.23917C11.602 8.39917 11.6817 8.59722 11.6817 8.83333C11.6817 9.06944 11.602 9.26722 11.4426 9.42667C11.2826 9.58667 11.0845 9.66667 10.8484 9.66667ZM3.36922 8.375C3.31367 7.55556 3.42839 6.8125 3.71339 6.14583C3.99783 5.47917 4.3795 4.91306 4.85839 4.4475C5.33783 3.9825 5.89006 3.625 6.51506 3.375C7.14006 3.125 7.76506 3 8.39006 3C9.65394 3 10.7478 3.39944 11.6717 4.19833C12.5951 4.99667 13.1539 5.99306 13.3484 7.1875C12.0428 7.17361 10.8623 6.82278 9.80672 6.135C8.75117 5.44778 7.95256 4.55556 7.41089 3.45833C7.18867 4.58333 6.72006 5.57972 6.00506 6.4475C5.2895 7.31583 4.41089 7.95833 3.36922 8.375Z"
+                      fill="#1C1B1F"
+                    />
+                  </svg>
+                </span>
+                <span class="text">Support</span>
+              </a>
+            </li>
+
+            <li class="sidelist-item">
+              <a href="#" class="sidelist-link">
+                <span class="icon">
+                  <svg
+                    width="21"
+                    height="20"
+                    viewBox="0 0 21 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <mask
+                      id="desksettingicon"
+                      style="mask-type: alpha"
+                      maskUnits="userSpaceOnUse"
+                      x="0"
+                      y="0"
+                      width="21"
+                      height="20"
+                    >
+                      <rect
+                        x="0.348389"
+                        width="20"
+                        height="20"
+                        fill="#D9D9D9"
+                      />
+                    </mask>
+                    <g mask="url(#desksettingicon)">
+                      <path
+                        d="M8.05673 18.3333L7.7234 15.6667C7.54284 15.5972 7.37284 15.5139 7.2134 15.4167C7.0534 15.3194 6.89701 15.2153 6.74423 15.1042L4.26507 16.1458L1.9734 12.1875L4.11923 10.5625C4.10534 10.4653 4.0984 10.3714 4.0984 10.2808V9.71832C4.0984 9.62832 4.10534 9.53471 4.11923 9.43749L1.9734 7.81249L4.26507 3.85416L6.74423 4.89582C6.89701 4.78471 7.05673 4.68055 7.2234 4.58332C7.39007 4.4861 7.55673 4.40277 7.7234 4.33332L8.05673 1.66666H12.6401L12.9734 4.33332C13.154 4.40277 13.3242 4.4861 13.4842 4.58332C13.6437 4.68055 13.7998 4.78471 13.9526 4.89582L16.4317 3.85416L18.7234 7.81249L16.5776 9.43749C16.5915 9.53471 16.5984 9.62832 16.5984 9.71832V10.2808C16.5984 10.3714 16.5845 10.4653 16.5567 10.5625L18.7026 12.1875L16.4109 16.1458L13.9526 15.1042C13.7998 15.2153 13.6401 15.3194 13.4734 15.4167C13.3067 15.5139 13.1401 15.5972 12.9734 15.6667L12.6401 18.3333H8.05673ZM10.3901 12.9167C11.1956 12.9167 11.8831 12.6319 12.4526 12.0625C13.022 11.493 13.3067 10.8055 13.3067 9.99999C13.3067 9.19443 13.022 8.50693 12.4526 7.93749C11.8831 7.36804 11.1956 7.08332 10.3901 7.08332C9.57062 7.08332 8.87951 7.36804 8.31673 7.93749C7.75451 8.50693 7.4734 9.19443 7.4734 9.99999C7.4734 10.8055 7.75451 11.493 8.31673 12.0625C8.87951 12.6319 9.57062 12.9167 10.3901 12.9167ZM10.3901 11.25C10.0428 11.25 9.74784 11.1283 9.50507 10.885C9.26173 10.6422 9.14007 10.3472 9.14007 9.99999C9.14007 9.65277 9.26173 9.35777 9.50507 9.11499C9.74784 8.87166 10.0428 8.74999 10.3901 8.74999C10.7373 8.74999 11.0326 8.87166 11.2759 9.11499C11.5187 9.35777 11.6401 9.65277 11.6401 9.99999C11.6401 10.3472 11.5187 10.6422 11.2759 10.885C11.0326 11.1283 10.7373 11.25 10.3901 11.25ZM9.51507 16.6667H11.1609L11.4526 14.4583C11.8831 14.3472 12.2826 14.1839 12.6509 13.9683C13.0187 13.7533 13.3553 13.493 13.6609 13.1875L15.7234 14.0417L16.5359 12.625L14.7442 11.2708C14.8137 11.0764 14.8623 10.8714 14.8901 10.6558C14.9178 10.4408 14.9317 10.2222 14.9317 9.99999C14.9317 9.77777 14.9178 9.55888 14.8901 9.34332C14.8623 9.12832 14.8137 8.9236 14.7442 8.72916L16.5359 7.37499L15.7234 5.95832L13.6609 6.83332C13.3553 6.51388 13.0187 6.24638 12.6509 6.03082C12.2826 5.81582 11.8831 5.65277 11.4526 5.54166L11.1817 3.33332H9.5359L9.24423 5.54166C8.81368 5.65277 8.41451 5.81582 8.04673 6.03082C7.6784 6.24638 7.34146 6.50693 7.0359 6.81249L4.9734 5.95832L4.1609 7.37499L5.95257 8.70832C5.88312 8.91666 5.83451 9.12499 5.80673 9.33332C5.77896 9.54166 5.76507 9.76388 5.76507 9.99999C5.76507 10.2222 5.77896 10.4375 5.80673 10.6458C5.83451 10.8542 5.88312 11.0625 5.95257 11.2708L4.1609 12.625L4.9734 14.0417L7.0359 13.1667C7.34146 13.4861 7.6784 13.7533 8.04673 13.9683C8.41451 14.1839 8.81368 14.3472 9.24423 14.4583L9.51507 16.6667Z"
+                        fill="#1A202C"
+                      />
+                    </g>
+                  </svg>
+                </span>
+                <span class="text">Settings</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </aside>
       <section class="main-section"></section>
     </main>
